# bazel-project-template

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  ruff.toml  rustfmt.toml
bazel/format/: BUILD.bazel
bazel/lint/: BUILD.bazel  linters.bzl
examples/cpp/: BUILD.bazel  hello_test.cc
examples/python/: BUILD.bazel
examples/rust/: BUILD.bazel
