module(
    name = "bazel-project-template",
    version = "0.0.1",
)

# ================== Core Dependencies ==================
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

# ================== C++ Toolchain (LLVM) ==================
bazel_dep(name = "toolchains_llvm", version = "1.6.0")

# Chrome sysroots (Debian Bullseye, glibc 2.31)
# These provide hermetic system libraries for cross-compilation
# The sysroot rule from toolchains_llvm handles extraction properly
sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "sysroot_linux_x86_64",
    sha256 = "36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50"],
)

sysroot(
    name = "sysroot_linux_aarch64",
    sha256 = "2f915d821eec27515c0c6d21b69898e23762908d8d7ccc1aa2a8f5f25e8b7e18",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/2f915d821eec27515c0c6d21b69898e23762908d8d7ccc1aa2a8f5f25e8b7e18"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

# LLVM toolchain configuration
# For native builds: use LLVM's bundled libc++ (static linking works)
# For cross-compilation: use dynamic libstdc++ from sysroot (Chrome sysroots don't have static libs)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.0",
    stdlib = {
        # Native x86_64: use LLVM's bundled libc++
        "linux-x86_64": "builtin-libc++",
        # Cross-compile to aarch64: use libc for minimal stdlib, add libstdc++ via link_libs
        "linux-aarch64": "libc",
    },
    cxx_flags = {
        "linux-aarch64": ["-stdlib=libstdc++"],
    },
    link_libs = {
        "linux-aarch64": ["-lstdc++", "-lm"],
    },
)

llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x86_64//sysroot",
    targets = ["linux-x86_64"],
)

llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_aarch64//sysroot",
    targets = ["linux-aarch64"],
)

use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# ================== Rust Toolchain ==================
bazel_dep(name = "rules_rust", version = "0.56.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.85.0"],
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# ================== Python Toolchain ==================
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_3_12")
register_toolchains("@python_3_12//:all")
